--- a/workspacej2ee/Media_Server_application_test/.classpath
+++ b/workspacej2ee/Media_Server_application_test/.classpath
@@ -8,6 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/jars/mysql-connector-java-5.1.8-bin.jar"/>
-	<classpathentry kind="lib" path="C:/jars/java-json.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jeje/Documents/GitHub/MS_application/jars/java-json.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
