--- a/Media_Server_application_test/.classpath
+++ b/Media_Server_application_test/.classpath
@@ -7,7 +7,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/jars/mysql-connector-java-5.1.8-bin.jar"/>
-	<classpathentry kind="lib" path="C:/jars/java-json.jar"/>
+	<classpathentry kind="var" path="ECLIPSE_HOME"/>
+	<classpathentry kind="lib" path="lib/java-json.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.8-bin.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
