--- a/Media_Server_application_test/.classpath
+++ b/Media_Server_application_test/.classpath
@@ -13,5 +13,7 @@
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.8-bin.jar" sourcepath="lib/mysql-connector-java-5.1.8-bin.jar"/>
 	<classpathentry kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry kind="lib" path="lib/hsqldb.jar"/>
+	<classpathentry kind="lib" path="lib/sqltool.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
