--- a/Media_Server_application_test/.classpath
+++ b/Media_Server_application_test/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="appClientModule"/>
-	<classpathentry including="United-Kingdom-flag.png|france_flag_32.png" kind="src" path="img"/>
+	<classpathentry kind="src" path="ressources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
@@ -9,11 +9,12 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="var" path="ECLIPSE_HOME"/>
-	<classpathentry kind="lib" path="lib/java-json.jar"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.8-bin.jar" sourcepath="lib/mysql-connector-java-5.1.8-bin.jar"/>
 	<classpathentry kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
-	<classpathentry kind="lib" path="lib/hsqldb.jar"/>
-	<classpathentry kind="lib" path="lib/sqltool.jar"/>
+	<classpathentry kind="lib" path="ressources/lib/hsqldb.jar"/>
+	<classpathentry kind="lib" path="ressources/lib/java-json.jar"/>
+	<classpathentry kind="lib" path="ressources/lib/mysql-connector-java-5.1.8-bin.jar"/>
+	<classpathentry kind="lib" path="ressources/lib/sqltool.jar"/>
+	<classpathentry kind="lib" path="ressources/lib/commons-io-1.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
